Fixed references to images to align them to the left.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -13,6 +13,11 @@ img {
   max-width: 100%;
   vertical-align: middle; }
 
+.img-left {
+  float: left;
+  margin: 10px;
+}
+
 blockquote {
   color: #828282;
   border-left: 4px solid #e8e8e8;
